# tgRPC

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
common/: api.py  envs.py  rpc.py  storage.py
handlers/: auto.py  core.py  manual.py  start.py
keyboards/: auto.py  common.py  manual.py  start.py
